--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,7 +18,10 @@
 					<h4><a><%= campground.name %></a></h4>
 					<p>
 						<%= campground.description %>
-					</p>			
+					</p>
+					<p>
+						<em>Submitted by <%= campground.author.username %></em>
+					</p>	
 				</div>
 			</div>
 			<div class="card">
@@ -32,7 +35,7 @@
 				<% campground.comments.forEach(function(comment){ %>
 					<div class="row">
 						<div class="col-md-12">
-							<strong><%= comment.author %></strong>
+							<strong><%= comment.author.username %></strong>
 							<span class="text-right">10 days ago</span>
 							<p>
 								<%= comment.text %>
